--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,25 +43,26 @@
   </div>
 </div>
 
-<div class="how-it-works-section">
+<div class="how-it-works-section container">
     <h2>How the app works</h2>
-    <div class="how-it-works-content">
-      <div class="how-it-works-item1">
+    <div class="row">
+     
+      <div class="how-it-works-image1 col-6 d-flex justify-content-center">
+        <img src="img/IMG_0851.png" alt="Create Account">
+      </div>
+      <div class="how-it-works-item1 col-6 pt-5">
         <h4>Create an account</h4>
         <h3>Create/login to an existing account to get started</h3>
         <p>An account is created with your email and a desired password</p>
       </div>
-      <div class="how-it-works-image1">
-        <img src="img/IMG_0851.png" alt="Create Account">
-      </div>
     </div>
-    <div class="how-it-works-content">
-      <div class="how-it-works-item2">
+    <div class="row mt-5">
+      <div class="how-it-works-item2 col-12 col-lg-6">
         <h4>Explore varieties</h4>
         <h3>Shop for your favorite meals as e dey hot</h3>
         <p>Shop for your favorite meals or drinks and enjoy while doing it.</p>
       </div>
-      <div class="how-it-works-image2">
+      <div class="how-it-works-image2 col-12 col-lg-6">
         <img src="img/IMG_0850.png" alt="Explore Varieties">
       </div>
     </div>
@@ -76,13 +77,14 @@
         <a href="#" class="btn btn-outline-light">App store</a>
       </div>
     </div>
-  </footer>
-  <div class="row"></div>
+    <div class="row"></div>
   <div class="col-md-12">
     <p>Copywright 2020 Bella Onojie.com</p>
   </div>
   <img class="imgg" src="img/логотип скачать.svg" alt="#">
+  </footer>
+  
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
